--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,8 @@ body    {
 section {
     background-image: linear-gradient(#99d3df, #cdcdcd, #88bbd6);
     display: inline-block;
-    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 5px;
     font-size: 18px;
     height: 600px;
@@ -64,16 +65,16 @@ img {
 /* Footer */
 footer  {
     background-image: linear-gradient(#99d3df, #cdcdcd, #88bbd6);
-    position: relative;
-    bottom: 0px;
-    height: 60px;
-    margin-left: 10px;
-    margin-right: 10px;
+    position: fixed;
+    height: 20px;
+    left: 0;
+    bottom: 0;
     border-radius: 5px;
     color: white;
     font-size: 10px;
     text-align: center;
     padding: 15px;
+    width: 100%;
     
 }
 /* Navigation Bar */
@@ -116,6 +117,9 @@ li  {
 a  {
     text-decoration: none;
 }
+nav    {
+    width: 100%
+}
 
 /* Contact page*/
 
@@ -148,7 +152,7 @@ button  {
     background-color: #99d3df;
 }
 .contactme  {
-    width: 99%;
+    width: 100%;
     margin-right: 20px;
 }
 
