--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ section {
     margin-right: auto;
     border-radius: 5px;
     font-size: 18px;
-    height: 600px;
+    height: auto;
     opacity: 0;
     transition: 0.5s;
     animation: fadeIn 0.8s linear 1.0s forwards
@@ -65,7 +65,7 @@ img {
 /* Footer */
 footer  {
     background-image: linear-gradient(#99d3df, #cdcdcd, #88bbd6);
-    position: fixed;
+    position: relative;
     height: 20px;
     left: 0;
     bottom: 0;
